--- a/modlist.html
+++ b/modlist.html
@@ -40,8 +40,12 @@
       <td>Sylas</td>
     </tr>
     <tr>
-      <td>horsetrack</td>
+      <td>horsetrack.js</td>
       <td>Sylas</td>
+    </tr>
+    <tr>
+      <td>mossnations.js</td>
+      <td>Mossy</td>
     </tr>
   </table>
 </body>
