--- a/modlist.html
+++ b/modlist.html
@@ -47,6 +47,10 @@
       <td>mossnations.js</td>
       <td>Mossy</td>
     </tr>
+    <tr>
+      <td>onlyslungus.js</td>
+      <td>GachaYTB3</td>
+    </tr>
   </table>
 </body>
 
