--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <p> </p>
   <a id="ds" onclick="document.getElementById('disc').textContent = 'PLEASE WAIT...'; document.getElementById('disc').click();">Discord</a>
   <a id="ds" onclick="document.getElementById('chl').textContent = 'PLEASE WAIT...'; document.getElementById('chl').click();"> - Changelog</a>
-  <a style='color: solid white;'>Need help? nations@sylasstuff.fun</a>
+  <p style='color: solid white;'>Need help? support@sylasnations.com</p>
   <a href="https://discord.gg/5XHjPcNxDB" id="disc"></a>
   <a href="changelog.html" id="chl"></a>
   <p> </p>
