--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+  <h1 style='color: solid white;'>Sylas's Nations</h1>
+  <p> </p>
   <p class="txtn">NATION ONE: <a class="txtn2" id='1'>NONE</a></p>
   <p> </p>
   <p class="txtn">NATION TWO: <a class="txtn2" id='2'>NONE</a> </p>
